rns-lang/tests/snapshots/lexer-directives-dot_string_literal.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
."Hello@World!"      ;;;;;;;;;; -_-

----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/lexer/directives/dot_string_literal.ja:1:1 ]
   │
 1 │ ."Hello@World!"      ;;;;;;;;;; -_-
   │ ───────┬───────  
   │        ╰───────── Unknown directive '."Hello@World!"'
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code
───╯
